--- a/custom_components/translation_localizer/manifest.json
+++ b/custom_components/translation_localizer/manifest.json
@@ -7,5 +7,6 @@
   "dependencies": [],
   "codeowners": ["@Desmond-Dong"],
   "requirements": ["requests>=2.25.0"],
-  "config_flow": true
+  "config_flow": true,
+  "iot_class": "cloud_polling"
 }
